# podcards-ai-engine

./: .gitignore  AnkiVoice-Architecture-Guide.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Gemini-Building Anki Apps for Mobile.md  PULL_REQUEST_TEMPLATE.md  README.md  SECURITY.md  all_files_app.txt  build_error_output.txt  build_log.txt  final_error.txt  settings.gradle.kts
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: android_release.yml
app/: build.gradle.kts
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  whisper-jni.cpp
app/src/main/cpp/ggml/src/: ggml.c
app/src/main/cpp/src/: whisper.cpp
app/src/main/java/com/antigravity/podcards/: MainActivity.kt
app/src/main/java/com/antigravity/podcards/ai/: AudioRecorder.kt  PiperEngine.kt  WhisperEngine.kt
app/src/main/java/com/antigravity/podcards/data/: AnkiRepository.kt
app/src/main/java/com/antigravity/podcards/domain/: UsageManager.kt
app/src/main/java/com/antigravity/podcards/ui/screens/: DeckConfigScreen.kt  DeckSelectionScreen.kt  NavScreens.kt  PodcastPlayerScreen.kt
app/src/main/java/com/antigravity/podcards/ui/theme/: Color.kt  Theme.kt  Type.kt
app/src/main/java/com/antigravity/podcards/ui/viewmodel/: PodcastAgentViewModel.kt  ThemeViewModel.kt
app/src/main/java/com/ichi2/anki/api/: AddContentApi.kt  Basic2Model.kt  BasicModel.kt  BuildConfig.kt
app/src/main/res/drawable/: ic_launcher_foreground.xml
app/src/main/res/values/: strings.xml  themes.xml
gradle/: libs.versions.toml
